added icons/images for WellbeingFragment

--- a/app/src/main/res/layout/inventory_item_row.xml
+++ b/app/src/main/res/layout/inventory_item_row.xml
@@ -16,9 +16,9 @@
             android:id="@+id/itemImage"
             android:layout_width="60dp"
             android:layout_height="60dp"
+            android:background="@drawable/ic_launcher_background"
             android:layout_marginStart="10dp"
             android:scaleType="centerCrop"
-            android:src="@color/material_dynamic_primary60"
             app:layout_constraintBottom_toBottomOf="@id/newsTextLayout"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@id/newsTextLayout"
